fix Cusor timeout iterator issue SERVER-3002